# mLoRA

./: .gitignore  .gitmodules  1.json  2.json  CITATION.cff  Dockerfile  Dockerfile.deploy  Dockerfile.dev  Install.md  MixLoRA.md  README.md  SECURITY.md  app.py  arc_evaluate.py  boolq_evaluate.py  build.sh  check_cuda.py  ci_script.py  ci_scripts.py  config.json  docker-compose.yml  dockerfile  eval.py  evaluator.py  generate.py  glue_mrpc_eval.py  inference.py  install_linux.sh  install_macos.sh  launch.py  launcher.py  legacy.py  mixlora.py  mlora.ipynb  mlora.py  mlora_cli.py  mlora_client.py  mlora_pp_train.py  mlora_server.py  mlora_train.py  (+13 more)
.launcher/: lora.json  lora_glm.json  lora_phi.json  mixlora.json  mixlora_compare.json  mixlora_glm.json  mixlora_phi.json
arc/: data_train.json  lora-train.json  mlora-train.json  mlora-tune.json  prepare_data.py  prompt.json
aspen/: LoraLiner.py  __init__.py  checkpoint.py  dataset.py  dispatcher.py  eval.py  evaluator.py  model.py  model_chatglm.py  model_llama.py  modelargs.py  modelloader.py  tokenizer.py  utils.py
aspen/tests/: loader_test.py
benchmarks/: bench_mlora.py  bench_mlora_pp.py  bench_peft.py  bench_peft_fsdp.py  bench_peft_tp.py  benchmark_utils.py  peft_baseline.py
boolq/: prompt.json
config/: alpaca.json  alpaca_mixlora.json  alpaca_moe.json  dummy.json  dummy_glm.json  dummy_minimal.json  dummy_mixlora.json  dummy_moe.json  dummy_phi.json  dummy_phi_mixlora.json  dummy_pp.json  finetune.json  finetune_chatglm.json  finetune_mixlora.json  glue_cola.json  glue_mrpc.json  glue_rte.json  glue_sst2.json  glue_stsb.json  lora.json
data/: data_demo.json  dummy_data.json  test_data_demo.json
demo/: contrastive_instruction_prompt.yaml  data.json  data1.json  dummy.yaml  dummy_data.json  generate_prompt.yaml  ppo_prompt.yaml  preference_prompt.yaml  preference_template.json  prompt.yaml  template.json
docs/: Install.md  MixLoRA.md  design.md  develop_new_adapter.md
metrics.json/: events.out.tfevents.1729890655.salma-75dc6c999b-mb7nx.1190476.0  events.out.tfevents.1729890904.salma-75dc6c999b-mb7nx.1191481.0
misc/: code-formatter.sh  finetune-demo.ipynb  install-extra.sh  mmlu_calscore.py  mmlu_evaluate.py
mlora/: FeedForward.py  LoraLiner.py  MixLoRA.py  __init__.py  attention.py  backends.py  checkpoint.py  common.py  config.py  dispatcher.py  evaluator.py  feed_forward.py  generate.py  generator.py  inference.py  lora_linear.py  lora_liner.py  mix_lora.py  model.py  model_chatglm.py  model_llama.py  model_mixlora.py  modelargs.py  prompter.py  tasks.py  tokenizer.py  train.py  trainer.py  utils.py
mlora_cli/: adapter.py  dataset.py  dispatcher.py  file.py  pyproject.toml  setting.py  shell.py  task.py
obqa/: prompt.json
scripts/: merge_pp_model.py  performance.md  performance_report.py  trans_to_safetensors.py
template/: template_demo.json
templates/: index.html  lora.json  lora_glm.json  lora_phi.json  mixlora.json  mixlora_glm.json  mixlora_phi.json
tests/: config_test.py  dataset_utils.py  dispatcher_test.py  dummy_data.json  dummy_train.py  eval_test.py  evaluator_test.py  finetune_all_case.sh  finetune_all_case_chatglm.sh  inference_all_case.py  inference_all_case_chatglm.py  loader_test.py  lora_op_test.py  peft_generation.py  pipeline_example.py  pipeline_example_check.py  pipeline_test.py  test_checkpoint.py  test_demo.py  test_generate.py  test_prompter.py  test_tokenizer.py  transport_check.py
webui/: Instruction.md  app.py  m-LoRA GUI Instruction.md
(+223 files in other folders)
