[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlora"
version = "0.3.3"
description = "A tool for fine-tuning large language models (LLMs) using the LoRA or QLoRA methods more efficiently."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.3.1",
    "datasets",
    "evaluate",
    "accelerate",
    "transformers==4.41.2",
    "sentencepiece",
    "huggingface_hub",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/scukdde-llm/mlora"
"Bug Tracker" = "https://github.com/scukdde-llm/mlora/issues"

[tool.setuptools.packages.find]
include = ["mlora*"]
