[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlora"
version = "0.4.5"
description = "An Efficient Factory to Build Multiple LoRA Adapters"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.3.1",
    "datasets",
    "evaluate",
    "accelerate",
    "transformers==4.43.2",
    "sentencepiece",
    "huggingface_hub",
    "scikit-learn",
    "tiktoken",
]

[project.urls]
"Homepage" = "https://github.com/mikecovlee/mLoRA"
"Bug Tracker" = "https://github.com/mikecovlee/mLoRA/issues"

[tool.setuptools.packages.find]
include = ["mlora*"]
